# moneyTransferService-backend/src/main/java/ru/netology/moneytransferservice/rest/ConfirmOperationController.java
@@ -3,6 +3,7 @@ package ru.netology.moneytransferservice.rest;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.ConfirmOperationApi;
 import org.openapitools.model.ConfirmOperationReqDto;
+import org.openapitools.model.OperationDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import ru.netology.moneytransferservice.service.ConfirmOperationService;
@@ -13,7 +14,7 @@ public class ConfirmOperationController implements ConfirmOperationApi {
   private final ConfirmOperationService confirmOperationService;
 
   @Override
-  public ResponseEntity<String> confirmOperationPost(
+  public ResponseEntity<OperationDto> confirmOperationPost(
       ConfirmOperationReqDto confirmOperationReqDto) {
     return ConfirmOperationApi.super.confirmOperationPost(confirmOperationReqDto);
   }
