# moneyTransferService-backend/src/main/java/ru/netology/moneytransferservice/rest/TransferController.java
@@ -2,6 +2,7 @@ package ru.netology.moneytransferservice.rest;
 
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.TransferApi;
+import org.openapitools.model.OperationDto;
 import org.openapitools.model.TransferReqDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -13,7 +14,7 @@ public class TransferController implements TransferApi {
   private final TransferService transferService;
 
   @Override
-  public ResponseEntity<String> transferPost(TransferReqDto transferReqDto) {
+  public ResponseEntity<OperationDto> transferPost(TransferReqDto transferReqDto) {
     return TransferApi.super.transferPost(transferReqDto);
   }
 }
