# moneyTransferService-backend/src/main/resources/swagger/api.yml
@@ -24,8 +24,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                description: Operation id
+                $ref: '#/components/schemas/operationDto'
 
         '400':
           description: Error input data
@@ -57,8 +56,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                description: Operation id
+                $ref: '#/components/schemas/operationDto'
 
         '400':
           description: Error input data
@@ -93,6 +91,12 @@ components:
               type: integer
             currency:
               type: string
+    operationDto:
+      type: object
+      properties:
+        operationId:
+          type: string
+          description: Operation id
     errorDto:
       type: object
       properties:
@@ -110,3 +114,4 @@ components:
         code:
           type: string
           description: Verification code
+
